--- a/base/etc/sysctl.d/30-secs.conf
+++ b/base/etc/sysctl.d/30-secs.conf
@@ -26,7 +26,7 @@ kernel.io_uring_disabled=2
 # disable unprivileged user namespaces
 # https://lwn.net/Articles/673597
 # (these two values are redundant, but not all kernels support the first one)
-user.max_user_namespaces=0
+user.max_user_namespaces=1
 
 
 # reverse path filtering to prevent some ip spoofing attacks
@@ -59,7 +59,7 @@ net.ipv6.conf.default.accept_redirects=0
 net.ipv4.tcp_timestamps=0
 
 # disable usb
-#kernel.deny_new_usb=1
+#kernel.deny_new_usb=
 
 #disable coredum
 kernel.core_pattern=|/bin/false
