--- a/mnt/etc/skel/.config/waybar/config.jsonc
+++ b/mnt/etc/skel/.config/waybar/config.jsonc
@@ -112,7 +112,7 @@
         }
     },
     "tray": {
-        // "icon-size": 21,
+        "icon-size": 13,
         "spacing": 10
     },
     "clock": {
