--- a/mnt/etc/skel/.local/share/applications/org.gnome.Software.desktop
+++ b/mnt/etc/skel/.local/share/applications/org.gnome.Software.desktop
@@ -139,7 +139,7 @@ Exec=gnome-software %U
 Terminal=false
 Type=Application
 Categories=GNOME;GTK;System;PackageManager;
-NoDisplay=true
+NoDisplay=false
 # Translators: Search terms to find this app. Do NOT translate or localize the semicolons! The list MUST also end with a semicolon!
 Keywords[af]=bywerkings;opgradeer;bronne;lêerstoor;voorkeure;installeer;verwyder;program;sagteware;toep;winkel;
 Keywords[ar]=تحديثات;ترقيات;مصادر;مستودعات;تفضيلات;تنصيب;إزالة;برنامج;برمجية;تطبيق;سوق;تحديث;ترقية;مصدر;مستودع;
